# rust_uefi_hello_aarch64

./: Cargo.toml  LICENSE  Makefile
efi/: .gitignore  startup.nsh
src/: main.rs
uefi_debug_loader/: .gitignore  Dockerfile  main.c
