[package]
name = "rust_uefi_hello_aarch64"
version = "0.1.0"
authors = ["Toshifumi NISHINAGA <tnishinaga.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = {git = 'https://github.com/tnishinaga/uefi-rs/', branch = 'add_support_aarch64'}
uefi-services = {git = 'https://github.com/tnishinaga/uefi-rs/', branch = 'add_support_aarch64', package = 'uefi-services'}
log = "0.4.8"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16 
incremental = true
overflow-checks = true